--- a/data/pages/works_memo_individual3.html
+++ b/data/pages/works_memo_individual3.html
@@ -241,7 +241,7 @@
                    
                 </div>
                 <div>
-                    <figure class="square_poster" sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/khj_poster.png"></figure>
+                    <figure class="square_poster sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/khj_poster.png"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
                     포스트잇 콘셉트를 빌려서 달력, 알람, 체크리스트 UI를 제작했다.<br>
