--- a/data/pages/works_memo_individual5.html
+++ b/data/pages/works_memo_individual5.html
@@ -239,7 +239,7 @@
                    
                 </div>
                 <div>
-                    <figure class="square_poster" sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/wsy_poster.jpg"></figure>
+                    <figure class="square_poster sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/wsy_poster.jpg"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
                     거울은 자기 내면과 외면을 담아낸 자화상이라고 할 수 있다.<br>
