희제내용넣는중

--- a/data/pages/about.html
+++ b/data/pages/about.html
@@ -15,7 +15,7 @@
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript">
-        window.location.replace('./open.html')
+        window.location.replace('http://pnudt2021.com/data/pages/open.html')
     </script>
 </head>
 <body>
