--- a/data/pages/works_me_team.html
+++ b/data/pages/works_me_team.html
@@ -212,29 +212,31 @@
                 <div><span class="concept">MEMBERS</span></div>
                 <ui class="members_list">
                     <li class="members_go"><a href="#mem_1" >김나영</a></li>
-                    <li class="members_go"><a href="#mem_2" >김나영</a></li>
-                    <li class="members_go"><a href="#mem_3" >김나영</a></li>
-                    <li class="members_go"><a href="#mem_4" >김나영</a></li>
-                    <li class="members_go"><a href="#mem_5" >김나영</a></li>
+                    <li class="members_go"><a href="#mem_2" >김수빈</a></li>
+                    <li class="members_go"><a href="#mem_3" >김재환</a></li>
+                    <li class="members_go"><a href="#mem_4" >배나영</a></li>
+                    <li class="members_go"><a href="#mem_5" >이황준</a></li>
                 </ui>
             </div>
             <div class="team_title">
                 <div class="concept">CONCEPT</div>
-                <div class="concept_title">Persona</div>
+                <div class="concept_title">PERSONA</div>
                 <div class="concept_text">
-                    집을 떠올려 보면 온통 추억이 가득하다. <br>
-                    어릴적 사진이 들어있는 액자.. 지금은 안쓰는 카세트.. <br>
-                    집에 있는 과거의 물건은 시간이 지남에 따라 닳고 낡아간다. 
+                    페르소나(Persona)는 라틴어어로 '가면'을 의미하며 주로 '외적 인격'을 뜻한다.  <br>
+                    친구 앞에서의 나, 교수님 앞에서의 나, 그리고 가족 앞에서의 내가 모두 다른 모습을 하고 있듯, <br>
+                    우리는 살면서 많은 가면-외적 인격을 사용하며 살아간다. <br>
+                    이 가면이 갑갑하지는 않은가? 그렇다면 이는 나를 옥죄는 존재이기만 한가? 진정한 나는 어떤 모습일까? <br>
+                    우리는 인터랙션 아트와 동영상으로 그 물음에 대한 답을 하고자 한다. <br>
                 </div>
             </div>
             <div class="team_members">
                 <div><span class="concept">MEMBERS</span></div>
                 <ul class="members_list">
                     <li class="members_go"><a href="#mem_1" >김나영</a></li>
-                    <li class="members_go"><a href="#mem_2" >김나영</a></li>
-                    <li class="members_go"><a href="#mem_3" >김나영</a></li>
-                    <li class="members_go"><a href="#mem_4" >김나영</a></li>
-                    <li class="members_go"><a href="#mem_5" >김나영</a></li>
+                    <li class="members_go"><a href="#mem_2" >김수빈</a></li>
+                    <li class="members_go"><a href="#mem_3" >김재환</a></li>
+                    <li class="members_go"><a href="#mem_4" >배나영</a></li>
+                    <li class="members_go"><a href="#mem_5" >이황준</a></li>
                 </ul>
             </div>
         </div>
@@ -247,10 +249,13 @@
                 </div>
             <div class="team_film_text mobile_none">
                 <div>
-                    가까이서 자세히 보다 바쁜 일상 속에
-                    <br>우리는 ‘나’를 들여다볼 시간이 없다. 
-                    <br>당장에 해야 할 과제나 일들에 밀려
-                    <br>내가 좋아하는 일들은 뒷전에 놓기 때문이다. 
+                    어제는 성실한 직원, 오늘은 유쾌한 친구. 내일은 사랑스러운 연인, 주말엔 게으름뱅이로.<br>
+여러 상황을 오가다보면 자연스레 의문이 든다. <br>“어떤 모습이 진짜 '나'의 모습일까?” 자칫 부정적으로 흘러갈 수 있는 이야기. <br>
+그러나 우리는 “그럴 필요 없다.”는 말을 건낸다.<br>
+게임 속 캐릭터를 고르는 것처럼 각각의 상황에 적합한 '나'를 선택해, <br>목적에 맞는 역할을 수행하는 일련의 모습들은 즐겁고 유쾌하기만 하다. <br>
+때때로 과부하가 걸리는 날도 있지만 한 발자국 떨어져 잠시 쉬어가면 그만. <br>
+이렇듯 다양한 부캐들 역시 모두 나의 자연스러운 일부임을 받아들이자.
+
                 </div>
             </div>
         </div>
@@ -306,9 +311,9 @@
                 </div>
             </div>
             <div class="team_interactive_step" >
-                <div class="step"><img src="../images/team/step.png"><div>1. 이렇게한다이렇게한다이렇게한다.</div></div>
-                <div class="step"><img src="../images/team/step.png"><div>1. 이렇게한다.</div></div>
-                <div class="step"><img src="../images/team/step.png"><div>1. 이렇게한다.</div></div>
+                <div class="step"><img src="../images/team/step.png"><div>1. 대나무숲에서 빨간색 버튼을 누르고 하지 못했던 말을 한다.</div></div>
+                <div class="step"><img src="../images/team/step.png"><div>2. 노란색 버튼을 눌러 저장을 하고 파란색 버튼을 누르면 바람이 내 속마음을 실어간다.</div></div>
+                <div class="step"><img src="../images/team/step.png"><div>3. 전시장 내부를 돌아다니다 보면 랜덤으로 송출되는 내 목소리가 들려온다.</div></div>
                 
             </div>
         </div>
@@ -322,8 +327,8 @@
             <img class="team_indivi_image" src="../images/team/inter1.png">
             <div class="team_indivi">
                 <div id="mem_1">
-                    <p class="team_indivi_text_eng">KIM HEE JE</p>
-                    <p class="team_indivi_text1">김희제</p>
+                    <p class="team_indivi_text_eng">Kim Nayoung</p>
+                    <p class="team_indivi_text1">김나영</p>
                 </div>
                 
                 <p class="team_indivi_text2">POST IT</p>
