--- a/data/pages/works_memo_individual4.html
+++ b/data/pages/works_memo_individual4.html
@@ -211,9 +211,16 @@
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 신유진 </div>
-                        <div id="person_name_eng"> KIM SU BIN </div>
+                        <div id="person_name_eng"> Shin Yu Jin </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
+                    <table class = "infor">
+                        <tr>
+                        <th>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="2.5rem" height="2.5rem" fill="#000000" class="icon" viewBox="0 0 256 256"><rect width="256" height="256" fill="none" ></rect><path d="M179,0H30.2A30.24,30.24,0,0,0,0,30.2V134.14a30.24,30.24,0,0,0,30.2,30.21H179a30.24,30.24,0,0,0,30.2-30.21V30.2A30.24,30.24,0,0,0,179,0Zm0,14.44a16.24,16.24,0,0,1,3.58.42L119.82,86.1a20.27,20.27,0,0,1-30.42,0L26.62,14.86a16.24,16.24,0,0,1,3.58-.42Zm15.76,119.7A15.78,15.78,0,0,1,179,149.91H30.2a15.78,15.78,0,0,1-15.76-15.77V30.2a15.62,15.62,0,0,1,1.18-6L78.56,95.65a34.74,34.74,0,0,0,52.09,0l62.94-71.42a15.62,15.62,0,0,1,1.18,6Z"/></svg>
+                        </th>
+                            <td> qwe15293245@naver.com</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
@@ -221,7 +228,7 @@
         <div class="scroll-section">
             <div class="work_information">
                 <div id="concept">CONCEPT</div>
-                <div id="work_name">미정이</div>
+                <div id="work_name"></div>
                 <div id="work_explain">
                     [무드셀라증후군]이란, 추억은 항상 아름답다고 하며 좋았던 기억만 남겨두려는 심리를 말한다.
                     이 증후군을 앓는 사람은 과거의 일을 회상할 때 나쁜 기억은 빨리 지워버리고 좋은 기억만을 남기려는 기억 왜곡 현상을 보인다.
@@ -234,7 +241,8 @@
                 <div class="dd">
                     <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="toomuch_mom_touch sa sa-scaleUp" data-sa-delay="100">" 두가지 관점 "</div>
+                    <div class="toomuch_mom_touch sa sa-scaleUp pc_only" data-sa-delay="100">" 두가지 관점 "</div>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 두가지 관점 "</div>
                     <div class="toomuch_information sa sa-down pc_only" data-sa-delay="200">
                         자유억압의 상징인 부르카.
                         그리고 메이크업을 진하게 한 부르카 안의 여성.
@@ -287,7 +295,7 @@
                     <div>
                         <div class="how pc_only">
                             <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔프로젝트</div>
                         </div>
                         <div class="how">
                             <div class="howto sa sa-up pc_only"data-sa-delay="200">" 무드셀라 증후군 "</div>
