--- a/data/pages/works_memo_individual5.html
+++ b/data/pages/works_memo_individual5.html
@@ -211,27 +211,30 @@
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 우승용 </div>
-                        <div id="person_name_eng"> KIM SU BIN </div>
+                        <div id="person_name_eng"> Wooseungyong </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
+                    <table class = "infor">
+                        <tr>
+                        <th>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="2.5rem" height="2.5rem" fill="#000000" class="icon" viewBox="0 0 256 256"><rect width="256" height="256" fill="none" ></rect><path d="M179,0H30.2A30.24,30.24,0,0,0,0,30.2V134.14a30.24,30.24,0,0,0,30.2,30.21H179a30.24,30.24,0,0,0,30.2-30.21V30.2A30.24,30.24,0,0,0,179,0Zm0,14.44a16.24,16.24,0,0,1,3.58.42L119.82,86.1a20.27,20.27,0,0,1-30.42,0L26.62,14.86a16.24,16.24,0,0,1,3.58-.42Zm15.76,119.7A15.78,15.78,0,0,1,179,149.91H30.2a15.78,15.78,0,0,1-15.76-15.77V30.2a15.62,15.62,0,0,1,1.18-6L78.56,95.65a34.74,34.74,0,0,0,52.09,0l62.94-71.42a15.62,15.62,0,0,1,1.18,6Z"/></svg>
+                        </th>
+                            <td>wsy9911@naver.com</td>
+                        </tr><tr>
+                        <th>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="2.5rem" height="2.5rem" fill="#000000" class="icon" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><circle cx="128" cy="128" r="40" fill="none" stroke="#000000" stroke-miterlimit="10" stroke-width="16"></circle><rect x="36" y="36" width="184" height="184" rx="48" stroke-width="16" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" fill="none"></rect><circle cx="180" cy="75.99998" r="12"></circle></svg>
+                        </th>
+                        <td> __oo__eung__ong</td></tr>
+                    </table>
                 </div>
             </div>
         </div>
 
-        <div class="scroll-section">
-            <div class="work_information">
-                <div id="concept">CONCEPT</div>
-                <div id="work_name">미정이</div>
-                <div id="work_explain">
-                    아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 
-                    아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 </div>
-            </div>
-        </div>
-            <div class="scroll-section section-divider" id="section__poster">
+            <div class="scroll-section section-divider blank" id="section__poster">
                 <div class="dd">
-                    <div class="video_name sa sa-up">OWN TIME</div>
+                    <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch_square sa sa-scaleUp" data-sa-delay="100">" 들여다보기 "</div>
+                    <div class="mom_touch_square sa sa-scaleUp pc_only" data-sa-delay="100">" OWN TIME "</div>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" OWN TIME "</div>
                     <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
                         거울은 자기 내면과 외면을 담아낸 자화상이라고 할 수 있다.<br>
                         ‘거울 속 나’의 모습을 들여다보며 ‘거울 밖 나’의 모습을 되비추는 시간을 가져보자.
@@ -271,7 +274,7 @@
                     <div>
                         <div class="how pc_only">
                             <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝트</div>
                         </div>
                         <div class="how">
                             <div class="howto sa sa-up pc_only"data-sa-delay="200">" 휩쓸리다 "</div>
