--- a/data/pages/works_me_individual3.html
+++ b/data/pages/works_me_individual3.html
@@ -213,9 +213,26 @@
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 김재환 </div>
-                        <div id="person_name_eng"> PARK HEE JE </div>
+                        <div id="person_name_eng"> Kim Jae Hwan </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;koik105@naver.com </div>
+                    <table class = "infor">
+                        <tr>
+                        <th>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="#000000" class="icon" viewBox="0 0 256 256"><rect width="256" height="256" fill="none" ></rect><path d="M179,0H30.2A30.24,30.24,0,0,0,0,30.2V134.14a30.24,30.24,0,0,0,30.2,30.21H179a30.24,30.24,0,0,0,30.2-30.21V30.2A30.24,30.24,0,0,0,179,0Zm0,14.44a16.24,16.24,0,0,1,3.58.42L119.82,86.1a20.27,20.27,0,0,1-30.42,0L26.62,14.86a16.24,16.24,0,0,1,3.58-.42Zm15.76,119.7A15.78,15.78,0,0,1,179,149.91H30.2a15.78,15.78,0,0,1-15.76-15.77V30.2a15.62,15.62,0,0,1,1.18-6L78.56,95.65a34.74,34.74,0,0,0,52.09,0l62.94-71.42a15.62,15.62,0,0,1,1.18,6Z"></path></svg>
+                        </th>
+                            <td>gold09382@hanmail.net</td>
+                        </tr>
+                        <tr>
+                        <th>
+                            <svg xmlns="http://www.w3.org/2000/svg"  fill="#000000" class="icon" viewBox="0 0 256 256"><rect width="256" height="256" fill="none" ></rect><path d="M92.47629,124.81528a84.34782,84.34782,0,0,0,39.05334,38.8759,7.92754,7.92754,0,0,0,7.8287-.59231L164.394,146.40453a8,8,0,0,1,7.58966-.69723l46.837,20.073A7.97345,7.97345,0,0,1,223.619,174.077,48.00882,48.00882,0,0,1,176,216,136,136,0,0,1,40,80,48.00882,48.00882,0,0,1,81.923,32.381a7.97345,7.97345,0,0,1,8.29668,4.79823L110.31019,84.0571a8,8,0,0,1-.65931,7.53226L93.01449,117.00909A7.9287,7.9287,0,0,0,92.47629,124.81528Z" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path></svg>
+                        </th>
+                        <td>010-9427-6006</td>
+                        </tr><tr>
+                        <th>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="#000000" class="icon" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><circle cx="128" cy="128" r="40" fill="none" stroke="#000000" stroke-miterlimit="10" stroke-width="16"></circle><rect x="36" y="36" width="184" height="184" rx="48" stroke-width="16" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" fill="none"></rect><circle cx="180" cy="75.99998" r="12"></circle></svg>
+                        </th>
+                        <td>jaehwan6006</td></tr>
+                    </table>
                 </div>
             </div>
         </div>
@@ -234,7 +251,7 @@
                 <div class="dd">
                     <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 맘스터치 "</div>
+                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" <br>WE<br>ME<br> "</div>
                     <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
                         <br><br><br><br><br><br>
                     </div>
@@ -272,7 +289,7 @@
                     <div>
                         <div class="how pc_only">
                             <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔프로젝트</div>
                         </div>
                         <div class="how">
                             <div class="howto sa sa-up pc_only"data-sa-delay="200">" We Memo Me "</div>
