--- a/data/pages/works_me_individual4.html
+++ b/data/pages/works_me_individual4.html
@@ -211,27 +211,26 @@
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 배나영 </div>
-                        <div id="person_name_eng"> KIM SU BIN </div>
+                        <div id="person_name_eng"> BAE NA YOUNG </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
+                    <table class = "infor">
+                        <tr>
+                        <th>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="2.5rem" height="2.5rem" fill="#000000" class="icon" viewBox="0 0 256 256"><rect width="256" height="256" fill="none" ></rect><path d="M179,0H30.2A30.24,30.24,0,0,0,0,30.2V134.14a30.24,30.24,0,0,0,30.2,30.21H179a30.24,30.24,0,0,0,30.2-30.21V30.2A30.24,30.24,0,0,0,179,0Zm0,14.44a16.24,16.24,0,0,1,3.58.42L119.82,86.1a20.27,20.27,0,0,1-30.42,0L26.62,14.86a16.24,16.24,0,0,1,3.58-.42Zm15.76,119.7A15.78,15.78,0,0,1,179,149.91H30.2a15.78,15.78,0,0,1-15.76-15.77V30.2a15.62,15.62,0,0,1,1.18-6L78.56,95.65a34.74,34.74,0,0,0,52.09,0l62.94-71.42a15.62,15.62,0,0,1,1.18,6Z"/></svg>
+                        </th>
+                            <td> nayoung2yaa@gmail.com</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
 
-        <div class="scroll-section">
-            <div class="work_information">
-                <div id="concept">CONCEPT</div>
-                <div id="work_name">미정이</div>
-                <div id="work_explain">
-                    아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 
-                    아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 </div>
-            </div>
-        </div>
-            <div class="scroll-section section-divider" id="section__poster">
+            <div class="scroll-section section-divider blank" id="section__poster">
                 <div class="dd">
                     <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch_square sa sa-scaleUp" data-sa-delay="100">" 맘스터치 "</div>
+                    <div class="mom_touch_square sa sa-scaleUp pc_only" data-sa-delay="100">" reflection<br>of me "</div>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" reflection of me "</div>
                     <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
                         <br><br><br><br><br><br>
                     </div>
@@ -268,7 +267,7 @@
                     <div>
                         <div class="how pc_only">
                             <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔프로젝트, 아두이노, 스피커</div>
                         </div>
                         <div class="how">
                             <div class="howto sa sa-up pc_only"data-sa-delay="200">" meflection "</div>
