--- a/data/pages/works_memo_individual1.html
+++ b/data/pages/works_memo_individual1.html
@@ -211,27 +211,26 @@
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 권성화 </div>
-                        <div id="person_name_eng"> KIM SU BIN </div>
+                        <div id="person_name_eng"> Kwon Sung Hwa </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
+                    <table class = "infor">
+                        <tr>
+                        <th>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="2.5rem" height="2.5rem" fill="#000000" class="icon" viewBox="0 0 256 256"><rect width="256" height="256" fill="none" ></rect><path d="M179,0H30.2A30.24,30.24,0,0,0,0,30.2V134.14a30.24,30.24,0,0,0,30.2,30.21H179a30.24,30.24,0,0,0,30.2-30.21V30.2A30.24,30.24,0,0,0,179,0Zm0,14.44a16.24,16.24,0,0,1,3.58.42L119.82,86.1a20.27,20.27,0,0,1-30.42,0L26.62,14.86a16.24,16.24,0,0,1,3.58-.42Zm15.76,119.7A15.78,15.78,0,0,1,179,149.91H30.2a15.78,15.78,0,0,1-15.76-15.77V30.2a15.62,15.62,0,0,1,1.18-6L78.56,95.65a34.74,34.74,0,0,0,52.09,0l62.94-71.42a15.62,15.62,0,0,1,1.18,6Z"/></svg>
+                        </th>
+                            <td> acafela13@gmail.com</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
 
-        <div class="scroll-section">
-            <div class="work_information">
-                <div id="concept">CONCEPT</div>
-                <div id="work_name">미정이</div>
-                <div id="work_explain">
-                    아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 
-                    아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 아직못받음 아직못받았음 진짜못받았음 </div>
-            </div>
-        </div>
-            <div class="scroll-section section-divider" id="section__poster">
+            <div class="scroll-section section-divider blank" id="section__poster">
                 <div class="dd">
                     <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="toomuch_mom_touch sa sa-scaleUp" data-sa-delay="100">" 들여다보기 "</div>
+                    <div class="toomuch_mom_touch sa sa-scaleUp pc_only" data-sa-delay="100">" 각자의 길 "</div>
+                    <div class="mom_touch sa sa-scaleUp mobile_only" data-sa-delay="100">" 각자의 길 "</div>
                     <div class="toomuch_information sa sa-down pc_only" data-sa-delay="200">
                         [각자의 길] 은 끝이 보이지 않는 미로 속에서 자신의 길을 걸어가고 있는 사람들에 대한 이야기이다. 각자 어떤 길을, 어떻게 걸어가는지 보이진 않지만 GPS 이정표가 그들이 현재 위치를 말해준다.
                         우리가 살아가는 삶도 그렇다. 마치 미로 같아 한 치 앞도 모를 때가 많다. 이런 상황에서 남들이 어떻게 살아가고 있는지는 관심 가지지 않는다. 바로 내 옆에 위치하더라도 말이다.
@@ -273,7 +272,7 @@
                     <div>
                         <div class="how pc_only">
                             <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 스크린 : 빔 프로젝트, 발판 센서 : PCB기판, SENSOR</div>
                         </div>
                         <div class="how">
                             <div class="howto sa sa-up pc_only"data-sa-delay="200">" ME로 찾기 "</div>
