--- a/data/pages/works_memory_individual1.html
+++ b/data/pages/works_memory_individual1.html
@@ -211,9 +211,16 @@
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 김민송 </div>
-                        <div id="person_name_eng"> KIM SU BIN </div>
+                        <div id="person_name_eng"> KIM MIN SONG </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
+                    <table class = "infor">
+                        <tr>
+                        <th>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="2.5rem" height="2.5rem" fill="#000000" class="icon" viewBox="0 0 256 256"><rect width="256" height="256" fill="none" ></rect><path d="M179,0H30.2A30.24,30.24,0,0,0,0,30.2V134.14a30.24,30.24,0,0,0,30.2,30.21H179a30.24,30.24,0,0,0,30.2-30.21V30.2A30.24,30.24,0,0,0,179,0Zm0,14.44a16.24,16.24,0,0,1,3.58.42L119.82,86.1a20.27,20.27,0,0,1-30.42,0L26.62,14.86a16.24,16.24,0,0,1,3.58-.42Zm15.76,119.7A15.78,15.78,0,0,1,179,149.91H30.2a15.78,15.78,0,0,1-15.76-15.77V30.2a15.62,15.62,0,0,1,1.18-6L78.56,95.65a34.74,34.74,0,0,0,52.09,0l62.94-71.42a15.62,15.62,0,0,1,1.18,6Z"/></svg>
+                        </th>
+                            <td> kkimms09@naver.com</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
@@ -221,7 +228,7 @@
         <div class="scroll-section">
             <div class="work_information">
                 <div id="concept">CONCEPT</div>
-                <div id="work_name">미정이</div>
+                <div id="work_name">기억왜곡</div>
                 <div id="work_explain">
                     우리의 기억은 시간이 지나면 왜곡되기 마련이다. 이전의 사건이나 경험은 기억의 형태로 바로 저장되지 않는다.
                      시간이 흐르고 다시 상기하는 과정을 겪고서야 기억으로 자리를 잡게 된다. 
@@ -234,7 +241,7 @@
                 <div class="dd">
                     <div class="video_name sa sa-up">CONCEPT POSTER</div>
                     <div class = "line sa sa-right mobile_only"></div>
-                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">" 歪曲(기억왜곡) "</div>
+                    <div class="mom_touch sa sa-scaleUp" data-sa-delay="100">"歪曲(기억왜곡)"</div>
                     <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
                         <br><br><br><br><br><br>
                     </div>
