--- a/data/pages/works_memory_individual3.html
+++ b/data/pages/works_memory_individual3.html
@@ -211,9 +211,16 @@
                 <div class="person_information">
                     <div class = "name">
                         <div id="person_name_kor"> 서혜인 </div>
-                        <div id="person_name_eng"> KIM SU BIN </div>
+                        <div id="person_name_eng"> SEO HYEIN </div>
                     </div>
-                    <div id="email"> Email&nbsp;&nbsp;&nbsp;sukong0507@gmail.com </div>
+                    <table class = "infor">
+                        <tr>
+                        <th>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="2.5rem" height="2.5rem" fill="#000000" class="icon" viewBox="0 0 256 256"><rect width="256" height="256" fill="none" ></rect><path d="M179,0H30.2A30.24,30.24,0,0,0,0,30.2V134.14a30.24,30.24,0,0,0,30.2,30.21H179a30.24,30.24,0,0,0,30.2-30.21V30.2A30.24,30.24,0,0,0,179,0Zm0,14.44a16.24,16.24,0,0,1,3.58.42L119.82,86.1a20.27,20.27,0,0,1-30.42,0L26.62,14.86a16.24,16.24,0,0,1,3.58-.42Zm15.76,119.7A15.78,15.78,0,0,1,179,149.91H30.2a15.78,15.78,0,0,1-15.76-15.77V30.2a15.62,15.62,0,0,1,1.18-6L78.56,95.65a34.74,34.74,0,0,0,52.09,0l62.94-71.42a15.62,15.62,0,0,1,1.18,6Z"/></svg>
+                        </th>
+                            <td>iny4343@gmail.com</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
@@ -223,11 +230,9 @@
                 <div id="concept">CONCEPT</div>
                 <div id="work_name">방향을 잃다.</div>
                 <div id="work_explain">
-                    방향에겐 상대가 있다. 이의 시선으로 상대는 대상이 되고, 향하는 배경에 대해 설명 가능하다.
-                    방향 소실에 대한 책임은 기억에게 있음을 전한다. 
-                    움직임은 방향의 시선 과는 달리 정적이며 이것이 방향 소실에 대한 이유이다. 
-                    이렇듯 기억은 행동이 가지는 의미를 뜻하고 
-                    이에 더해 의미가 결합된 것이 방향성이다.  </div>
+                    방향에겐 상대가 있다. <br>이의 시선으로 상대는 대상이 되고, 향하는 배경에 대해 설명가능하다. <br>
+                    이어 방향 소실에 대한 책임은 기억에게 있음을 전한다. 기억은 행동이 가지는 의미를 말하고 나아가 방향성이 된다. 
+                    방향의 움직임은 시선과는 달리 정적이며 이것이 방향 소실에 대한 이유이다.<br>기억의 의미를 찾아보자. 그렇지 않으면 방향은 잃게된다.  </div>
             </div>
         </div>
             <div class="scroll-section section-divider" id="section__poster">
@@ -268,7 +273,7 @@
                     <div>
                         <div class="how pc_only">
                             <div class="howto sa sa-up ">&nbsp;&nbsp;사용 도구&nbsp;&nbsp;</div>
-                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 웹캠, 빔 프로젝터, 아두이노 센서(바람센서, 초음파센서)</div>
+                            <div class="howto_explain sa sa-left pc_only" data-sa-delay="100"> 키넥트, 빔프로젝터, 스피커</div>
                         </div>
                         <div class="how">
                             <div class="howto sa sa-up pc_only"data-sa-delay="200">" 방향성 "</div>
