--- a/data/pages/works_me_team.html
+++ b/data/pages/works_me_team.html
@@ -449,16 +449,17 @@
             <img class="team_indivi_image" src="../images/profile/1_1size/이황준.png">
             <div class="team_indivi">
                 <div id="mem_5">
-                    <p class="team_indivi_text1">이황준 <span class="team_indivi_text_eng">KIM JAE HWAN</span></p>
+                    <p class="team_indivi_text1">이황준 <span class="team_indivi_text_eng">LEE HWANGJUN</span></p>
                 </div>
                 
                 <p class="team_indivi_text2">자화상(Self-portrait)</p>
                 
                 <p class="team_indivi_text3">
-사람들은 타인의 시선을 스스로 만들어내고<br>
-스포트라이트 안에 자기 자신을 배치한다.<br>
-실제 존재하지도 않는 스포트라이트에 자신의 상황을<br>
-지나치게 주목하고, 과장하고, 걱정하....<br>
+사람들은 타인의 시선을 스스로 만들어내고 스포트라이트 안에<br>
+자기 자신을 배치한다. 실제 존재하지도 않는 스포트라이트에 자신의<br>
+상황을 지나치게 주목하고, 과장하고, 걱정하고, 그 생각에 사로잡혀<br>
+자신을 스스로 구속하며 일희일비하는 것이다. 이제 그만.....<br>
+
                     <div></div>
 <span class="link_indivi">개인작품 보러가기 ></span>
                 </p>
