--- a/data/pages/works_memo_individual3.html
+++ b/data/pages/works_memo_individual3.html
@@ -242,7 +242,7 @@
                     <div class = "line sa sa-right mobile_only"></div>
                     <div class="mom_touch_square sa sa-scaleUp" data-sa-delay="100">" POST IT UI "</div>
                     <div class="touch_information sa sa-down pc_only" data-sa-delay="200">
-                        포스트잇 콘셉트를 빌려서 달력, 알람, 체크리스트 UI를 제작했다.<br>
+                        포스트잇 콘셉트를 빌려서 달력, 알람, 체크리스트 UI를 제작했다.
                         아래의 메모지를 드래그 앤 드롭하여 꺼내 쓰는 방식으로 디자인했다.
                     </div>
                    
@@ -251,8 +251,8 @@
                     <figure class="square_poster sa sa-right" data-sa-delay="400"><img src="../images/individual/poster/khj_poster.png"></figure>
                 </div>
                 <div class="touch_information sa sa-down mobile_only" data-sa-delay="200">
-                    포스트잇 콘셉트를 빌려서 달력, 알람, 체크리스트 UI를 제작했다.<br>
-                        아래의 메모지를 드래그 앤 드롭하여 꺼내 쓰는 방식으로 디자인했다.
+                    포스트잇 콘셉트를 빌려서 달력, 알람, 체크리스트 UI를 제작했다.
+                    아래의 메모지를 드래그 앤 드롭하여 꺼내 쓰는 방식으로 디자인했다.
             </div>
 
 
